[contenteditable] Content after non-editable element disappears when merging lines using backspace https://bugs.webkit.org/show_bug.cgi?id=122748

Patch by Santosh Mahto <santosh.ma@samsung.com> on 2013-10-24
Reviewed by Ryosuke Niwa.

Source/WebCore:

In case of paragraph merging after deletion if second paragraph
contains non-editable element, then content after the non-editable
element(including non-editable element) will be removed while the
content before the element will be merged with the first paragraph.
This happens becasue endOfParagraphToMove calculation in merging function
stop at editing boundary so endOfParagraphToMove becomes position just
before non-editable content.
With this patch now endOfParagraphToMove is calculated by skipping
over the non-editable element.

Test: editing/deleting/merge-paragraph-contatining-noneditable.html

* editing/DeleteSelectionCommand.cpp:
(WebCore::DeleteSelectionCommand::mergeParagraphs): use CanSkipOverEditingBoundary
condition while calculating endOfParagraphToMove.

LayoutTests:

Adding test to verify that on merging the paragraph containing
non-editable element does not cause loss of non-editable content after
merging.

* editing/deleting/merge-paragraph-contatining-noneditable-expected.txt: Added.
* editing/deleting/merge-paragraph-contatining-noneditable.html: Added.

Canonical link: https://commits.webkit.org/141386@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157944 268f45cc-cd09-0410-ab3c-d52691b4dbfc